--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
   },
   "database": {
       "sql" : {
-        "host": "localhost",
+        "host": "postgresql",
         "port": "5432",
         "user": "twitter_clone",
         "pass": "twitterclone123",
