--- a/config.json
+++ b/config.json
@@ -15,10 +15,10 @@
         "name": "twitter"
       },
       "redis" : {
-        "host": "127.0.0.1",
+        "host": "redis",
         "port": "6379",
         "password": "twitterclone123",
-        "fds": "0"
+        "db_number": 0
       }
   }
 }
