make tracing tools stored in elasticsearch

--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ REDIS_DB_NUMBER=0
 TWITTER_CLONE_DOCKER_COMPOSE_PORT=9090
 TWITTER_CLONE_ADDRESS=":9090"
 DEBUG_MODE=true
-ZIPKIN_URL=http://localhost:9411/api/v2/spans
+ZIPKIN_URL=http://zipkin-collector:9411/api/v2/spans
