add application monitoring performance and refactor docker-compose.yml

--- a/.env
+++ b/.env
@@ -11,3 +11,15 @@ TWITTER_CLONE_DOCKER_COMPOSE_PORT=9090
 TWITTER_CLONE_ADDRESS=":9090"
 DEBUG_MODE=true
 ZIPKIN_URL=http://zipkin-collector:9411/api/v2/spans
+ZIPKIN_COLLECTOR_PORT=9411
+ZIPKIN_ES_HOSTS=http://zipkin-elasticsearch:9200
+ZIPKIN_ES_PORT_EXTERNAL=9201
+ZIPKIN_ES_PORT_INTERNAL=9200
+LOGSTASH_ES_HOST=http://elasticsearch:9200
+LOGSTASH_ES_PORT_EXTERNAL=9202
+LOGSTASH_ES_PORT_INTERNAL=9200
+LOGSTASH_PORT=9600
+KIBANA_PORT=5601    
+PROMETHEUS_PORT=9100
+CADVISOR_PORT=8080
+GRAFANA_PORT=3000
