add docker debug mode

--- a/debug.env
+++ b/debug.env
@@ -1,21 +1,21 @@
-DB_HOST=postgresql
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=twitter_clone
 DB_PASS=twitterclone123
 DB_NAME=twitter
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASS=twitterclone123
 REDIS_DB_NUMBER=0
-TWITTER_CLONE_DOCKER_COMPOSE_PORT=9090
+TWITTER_CLONE_DOCKER_COMPOSE_PORT=9091
 TWITTER_CLONE_ADDRESS=":9090"
 DEBUG_MODE=true
-ZIPKIN_URL=http://zipkin-collector:9411/api/v2/spans
+ZIPKIN_URL=http://localhost:9411/api/v2/spans
 ZIPKIN_COLLECTOR_PORT=9411
-ZIPKIN_ES_HOSTS=http://zipkin-elasticsearch:9200
+ZIPKIN_ES_HOSTS=http://127.0.0.1:9200
 ZIPKIN_ES_PORT_EXTERNAL=9201
 ZIPKIN_ES_PORT_INTERNAL=9200
-LOGSTASH_ES_HOST=http://elasticsearch:9200
+LOGSTASH_ES_HOST=http://127.0.0.2:9200
 LOGSTASH_ES_PORT_EXTERNAL=9202
 LOGSTASH_ES_PORT_INTERNAL=9200
 LOGSTASH_PORT=9600
