testing jenkins pipeline

--- a/.env
+++ b/.env
@@ -21,5 +21,6 @@ LOGSTASH_ES_PORT_INTERNAL=9200
 LOGSTASH_PORT=9600
 KIBANA_PORT=5601
 PROMETHEUS_PORT=9100
-CADVISOR_PORT=8080
+CADVISOR_PORT=8005
 GRAFANA_PORT=3000
+JENKINS_HOST_PORT=8010
