improve docker compose implementation

--- a/.env
+++ b/.env
@@ -1,26 +1,22 @@
 DB_HOST=postgresql
-DB_PORT=5432
+DB_HOST_PORT=5432
 DB_USER=twitter_clone
 DB_PASS=twitterclone123
 DB_NAME=twitter
 REDIS_HOST=redis
-REDIS_PORT=6379
+REDIS_HOST_PORT=6379
 REDIS_PASS=twitterclone123
 REDIS_DB_NUMBER=0
-TWITTER_CLONE_DOCKER_COMPOSE_PORT=9090
-TWITTER_CLONE_ADDRESS=":9090"
+TWITTER_CLONE_HOST_PORT=9090
 DEBUG_MODE=true
-ZIPKIN_URL=http://zipkin-collector:9411/api/v2/spans
-ZIPKIN_COLLECTOR_PORT=9411
+ZIPKIN_COLLECTOR_HOST_PORT=9411
+ZIPKIN_URL=http://zipkin-collector:${ZIPKIN_COLLECTOR_HOST_PORT}/api/v2/spans
+ZIPKIN_ES_HOST_PORT=9201
 ZIPKIN_ES_HOSTS=http://zipkin-elasticsearch:9200
-ZIPKIN_ES_PORT_EXTERNAL=9201
-ZIPKIN_ES_PORT_INTERNAL=9200
+LOGSTASH_ES_HOST_PORT=9202
 LOGSTASH_ES_HOST=http://elasticsearch:9200
-LOGSTASH_ES_PORT_EXTERNAL=9202
-LOGSTASH_ES_PORT_INTERNAL=9200
-LOGSTASH_PORT=9600
-KIBANA_PORT=5601
-PROMETHEUS_PORT=9100
-CADVISOR_PORT=8005
-GRAFANA_PORT=3000
-JENKINS_HOST_PORT=8010
+LOGSTASH_HOST_PORT=9600
+KIBANA_HOST_PORT=5601
+PROMETHEUS_HOST_PORT=9100
+CADVISOR_HOST_PORT=8081
+GRAFANA_HOST_PORT=3000
