--- a/debugmode/.env
+++ b/debugmode/.env
@@ -1,24 +1,21 @@
 DB_HOST=localhost
-DB_PORT=5432
+DB_HOST_PORT=5432
 DB_USER=twitter_clone
 DB_PASS=twitterclone123
 DB_NAME=twitter
 REDIS_HOST=localhost
-REDIS_PORT=6379
+REDIS_HOST_PORT=6379
 REDIS_PASS=twitterclone123
 REDIS_DB_NUMBER=0
-TWITTER_CLONE_ADDRESS=":9090"
 DEBUG_MODE=true
-ZIPKIN_URL=http://localhost:9411/api/v2/spans
-ZIPKIN_COLLECTOR_PORT=9411
-ZIPKIN_ES_HOSTS=http://127.0.0.1:9200
-ZIPKIN_ES_PORT_EXTERNAL=9201
-ZIPKIN_ES_PORT_INTERNAL=9200
-LOGSTASH_ES_HOST=http://127.0.0.2:9200
-LOGSTASH_ES_PORT_EXTERNAL=9202
-LOGSTASH_ES_PORT_INTERNAL=9200
-LOGSTASH_PORT=9600
-KIBANA_PORT=5601
-PROMETHEUS_PORT=9100
-CADVISOR_PORT=8080
-GRAFANA_PORT=3000
+ZIPKIN_COLLECTOR_HOST_PORT=9411
+ZIPKIN_URL=http://localhost:${ZIPKIN_COLLECTOR_HOST_PORT}/api/v2/spans
+ZIPKIN_ES_HOST_PORT=9201
+ZIPKIN_ES_HOSTS=http://localhost:9200
+LOGSTASH_ES_HOST_PORT=9202
+LOGSTASH_ES_HOST=http://localhost:9200
+LOGSTASH_HOST_PORT=9600
+KIBANA_HOST_PORT=5601
+PROMETHEUS_HOST_PORT=9100
+CADVISOR_HOST_PORT=8081
+GRAFANA_HOST_PORT=3000
