add self-signed certificate to twitter-clone backend application

--- a/.env
+++ b/.env
@@ -20,3 +20,5 @@ KIBANA_HOST_PORT=5601
 PROMETHEUS_HOST_PORT=9100
 CADVISOR_HOST_PORT=8081
 GRAFANA_HOST_PORT=3000
+TWITTER_CLONE_SERVER_CRT=twitter-clone.crt
+TWITTER_CLONE_SERVER_PK=twitter-clone.key
